Revision history for {{ $dist->name }}

{{ $NEXT }}

1.003022  2013-09-10 01:53:10Z (Karen Etheridge)
  - workaround added for plugins consuming plugins that use optional features
  - install problems fixed when some optional prereqs are not installed, by
    properly detecting the lack of features during testing (RT#88542)
  - spelling fixes (RT#87691, David Steinbrunner)

1.003021  2013-09-09 02:10:45Z (Karen Etheridge)
  - removed use of deprecated functions from Class::MOP
  - long-deprecated Devel::REPL::Plugin::NewlineHack removed at last
  - converted dist to Dist::Zilla, with a different mechanism for specifying
    optional features (install with cpanm --interactive to be prompted)

1.003020   2013-07-08
  - shebang fixed in re.pl so it is rewritten to point to the proper perl at
    install time (RT#70928)

1.003019   2013-06-27
  - Fix "No arguments!" error in Plugin::DDS when nothing to dump (RT#71205,
    Ash Berlin)
  - fix failing test when Lexical::Persistence is not installed

1.003018   2013-05-19
  - more attempts to fix Term::ReadLine issues in tests (RT#84246, mephinet)

1.003017   2013-04-03
  - fix issues with Term::ReadLine:Perl in tests (RT#84246) (thanks,
    Christopher McCann!)

1.003016   2013-03-26
  - make all plugins load again by using native traits (thanks, Zaki Mughal!)
    (RT#84011)

1.003015   2013-03-01
  - fix "Attempt to use reference as lvalue in substr" warning on perl 5.16
    (thanks, ilmari!)
  - plugins that are used by the default profile now default to being
    installed, fixing RT#83669 and RT#83677

1.003014   2012-10-31
  - now using native Moose attribute traits, instead of the deprecated
    MooseX::AttributeHelper (thanks, Justin Hunter!)
  - now using namespace::autoclean rather than namespace::clean (thanks, Karen
    Etheridge!)

1.003013   2012-05-19
  - Make Sys::SigAction optional dependency for Win32 systems
  - Apply some plugin related patchs from Caleb Cushing

1.003012   2010-09-27