@@ -3,27 +3,8 @@ package Devel::REPL::Profile::Default;
 use Moose;
 use namespace::autoclean;
 
-with 'Devel::REPL::Profile';
+# for backcompat only - Default was renamed to Standard
 
-sub plugins { qw(
-  Colors
-  Completion
-  CompletionDriver::INC
-  CompletionDriver::LexEnv
-  CompletionDriver::Keywords
-  CompletionDriver::Methods
-  History
-  LexEnv
-  DDS
-  Packages
-  Commands
-  MultiLine::PPI
-  ReadLineHistory
-);}
-
-sub apply_profile {
-  my ($self, $repl) = @_;
-  $repl->load_plugin($_) for $self->plugins;
-}
+extends 'Devel::REPL::Profile::Standard';
 
 1;
