@@ -1,6 +1,8 @@
 Revision history for {{ $dist->name }}
 
 {{ $NEXT }}
+  - The default profile is now "Minimal", not "Default", as Default requires
+    some optional features; Default renamed to Standard (RT#88615)
 
 1.003022  2013-09-10 01:53:10Z (Karen Etheridge)
   - workaround added for plugins consuming plugins that use optional features
